--- a/src/br/com/infox/telas/TelaOS.form
+++ b/src/br/com/infox/telas/TelaOS.form
@@ -297,14 +297,15 @@
     <Component class="javax.swing.JComboBox" name="cboOsSit">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="7">
-            <StringItem index="0" value="Na Bancada"/>
-            <StringItem index="1" value="Entrega OK"/>
-            <StringItem index="2" value="Or&#xe7;amento REPROVADO&#x9;"/>
-            <StringItem index="3" value="Aguardando Aprova&#xe7;&#xe3;o"/>
-            <StringItem index="4" value="Aguardando Pe&#xe7;as"/>
-            <StringItem index="5" value="Abandonado Pelo Cliente"/>
-            <StringItem index="6" value="Retornou"/>
+          <StringArray count="8">
+            <StringItem index="0" value=" "/>
+            <StringItem index="1" value="Na Bancada"/>
+            <StringItem index="2" value="Entrega OK"/>
+            <StringItem index="3" value="Or&#xe7;amento REPROVADO&#x9;"/>
+            <StringItem index="4" value="Aguardando Aprova&#xe7;&#xe3;o"/>
+            <StringItem index="5" value="Aguardando Pe&#xe7;as"/>
+            <StringItem index="6" value="Abandonado Pelo Cliente"/>
+            <StringItem index="7" value="Retornou"/>
           </StringArray>
         </Property>
       </Properties>
@@ -476,6 +477,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor em Forma de M&#xe3;o"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="excluir"/>
@@ -527,6 +529,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor em Forma de M&#xe3;o"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="atualizar"/>
@@ -545,6 +548,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor em Forma de M&#xe3;o"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="imprimir"/>
